--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -21,11 +21,11 @@
 {{- $workconf = true -}}
 {{- end -}}
 
-{{- $name := "Ben Mezger" -}}
-{{- $email := "me@benmezger.nl" -}}
-{{- $hostname := "seds" -}}
+{{- $name := "Willian de Souza" -}}
+{{- $email := "willian.souza.ti@gmail.com" -}}
+{{- $hostname := "bit" -}}
 {{- $gpg_keyid := "0x7357E344D6C3C795" -}}
-{{- $github_user := "benmezger" -}}
+{{- $github_user := "bit-willi" -}}
 {{- $maildir := "mail" -}}
 
 {{- $personal_smtp_host := "smtp.gmail.com" -}}
@@ -33,7 +33,7 @@
 {{- $personal_imap_host := "imap.gmail.com" -}}
 {{- $personal_imap_port := 443 -}}
 
-{{- $work_email := "benjamin.mezger@argyle.com" -}}
+{{- $work_email := "willian.souza@saperx.com.br" -}}
 {{- $work_smtp_host := "smtp.gmail.com" -}}
 {{- $work_smtp_port := 587 -}}
 {{- $work_imap_host := "imap.gmail.com" -}}
@@ -102,33 +102,22 @@ data:
 {{- end }}
 {{- if $secrets }}
   bitwarden:
-    i3rs: 1f13be62-1f5e-40fb-9b60-acb500c08fff
-    freenode: da4d9bba-62ee-47d4-8e9c-acb500c08fff
-    bnc: 66879550-7ff9-4e50-9a2d-acb500c08fff
-    liberachat: f4bd1859-14cf-4d8a-b12f-ad85004a4a94
-    spotify: d8ebcdfe-0ecc-40ec-a464-acb500c08fff
-    spotify_api: 64c5ef38-cb4b-4ae7-961d-acba0047e94b
-    wakatime_api: 806af555-54de-44cc-a857-acb500c08fff
-    personal_mail: c553f8b1-f4a3-4220-8b0b-acb500c08fff
-    work_mail: aeff6fce-4245-4fea-80a6-acb500c08fff
-    googleapi: 34d2c72b-c33d-44ad-883e-acbe01020aef
-    ssh_pub: 98ebec3b-3a9f-4220-9ae2-acc300fee77f
-    ssh_priv: 0572f760-a184-40f9-bfa2-acc300d9ec5c
+    i3rs: 1e298379-8595-4282-9506-b02301736669
+    wakatime_api: af7eba11-909c-4425-9ed4-b02300eb8c75
+    personal_mail: 7fdda3df-2ac1-43e2-a517-acd30009beb6
+    work_mail: 1e298379-8595-4282-9506-b02301736669
+    ssh_pub: 75f7a883-6d56-453d-8678-b02300bacf9e
+    ssh_priv: b51f9e3c-2a0a-44a9-8ff0-b02300c1320d
     ssh: eb36407d-787d-4266-9b97-acc3014f98a3
-    pgp_priv: 5bc1d3cd-3332-4c83-ad4a-accc00f68aad
+    pgp_priv: 12fd17c3-9a82-45f6-968c-b023017d97d0
     lastfm: c9a4cb98-f7b5-46ea-bef9-acb500c08fff
-    slack_work_api_token: 5e81b24b-13b5-4c03-a415-acda010435cb
-    weechat_passphrase: afed73f5-2638-4157-9f06-acdd012d5ad3
-    github_repo_token: 975a2e15-57b6-4875-b1f5-acea002b111f
-    bnc_liberachat_pass: d7eab2fc-2f25-42e1-85a2-ad3200d3fb45
-    bnc_freenode_pass: 0d9f5d3d-5d10-4b03-8a41-ad3200d39a75
-    bnc_2600_pass: f07a3e72-6d5a-43de-9314-acb500c08fff
-    bnc_oftc_pass: bf464a79-487b-4cff-9aae-ad3200d3b68e
-    bnc_darkscience_pass: a3569ea6-6f95-48c4-aa8e-ad3200d3d849
-    bnc_bitlbee_pass: aaecbe46-e879-43c7-a3ab-ad5500079ea9
+    weechat_passphrase: 1e298379-8595-4282-9506-b02301736669
+    github_repo_token: f52b5149-5545-4061-9949-b02300edd975
     codestats_api_key_osx: 4be111e5-875c-4e73-8787-ad380047ac21
-    codestats_api_key_linux: 2c97140b-4f05-423e-b26b-ae79002f5bef
-    ngrok: 5b9e7d65-f849-47c3-ad8c-ae040088a53f
-    nordvpn: dc571eaf-5749-428b-a435-af7c000c809e
-    ssh_config: 1d2b426a-8954-4aef-9be8-afd000af38dc
+    codestats_api_key_linux: af7eba11-909c-4425-9ed4-b02300eb8c75
+    ngrok: d64af208-3b13-4630-b71f-b02301817892
+    nordvpn: 1e298379-8595-4282-9506-b02301736669
+    ssh_config: caca3cd5-b869-4bc2-a7e9-b02000052afe
+    googleapi: 100867e6-9487-45e4-9167-b02301776059
+    liberachat: 1e298379-8595-4282-9506-b02301736669
 {{- end -}}
