i3: show battery on status bar

--- a/dot_config/i3/status.toml.tmpl
+++ b/dot_config/i3/status.toml.tmpl
@@ -54,9 +54,9 @@ block = "sound"
 [[block]]
 block = "backlight"
 
-#[[block]]
-#block = "battery"
-#format = "{percentage} {time}"
+[[block]]
+block = "battery"
+format = " $icon $percentage $time "
 
 [[block]]
 block = "time"
