i3status-rs: Add pomodoro to bar

--- a/dot_config/i3/status.toml.tmpl
+++ b/dot_config/i3/status.toml.tmpl
@@ -5,6 +5,11 @@ theme = "semi-native"
 # icons = "awesome"
 
 [[block]]
+block = "custom"
+cycle = ["i3-gnome-pomodoro status"]
+interval = 1
+
+[[block]]
 block = "disk_space"
 path = "/"
 info_type = "available"
