redshift: add to reduce eye strees

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -119,4 +119,5 @@ data:
     ssh_config: caca3cd5-b869-4bc2-a7e9-b02000052afe
     googleapi: 81035666-62e2-4c4c-af25-b0680016e27d
     liberachat: 1e298379-8595-4282-9506-b02301736669
+    redshift: da49ff0d-3984-4d07-86ba-b08e0166812b
 {{- end -}}
