chezmoi: add eleven soft server picker

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -120,4 +120,5 @@ data:
     googleapi: 81035666-62e2-4c4c-af25-b0680016e27d
     liberachat: 1e298379-8595-4282-9506-b02301736669
     redshift: da49ff0d-3984-4d07-86ba-b08e0166812b
+    elevensoft: 5eef454b-706e-4347-b4c2-b0d70175769d
 {{- end -}}
