i3status-rs: add mode display from optimus-manager

--- a/dot_config/i3/status.toml.tmpl
+++ b/dot_config/i3/status.toml.tmpl
@@ -5,6 +5,10 @@ theme = "semi-native"
 # icons = "awesome"
 
 [[block]]
+block = "custom"
+command="echo -n 'MODE ' && optimus-manager --print-mode | cut -d' ' -f5"
+
+[[block]]
 block = "disk_space"
 path = "/"
 info_type = "available"
