--- a/dot_notmuch-config.tmpl
+++ b/dot_notmuch-config.tmpl
@@ -2,7 +2,7 @@
 path={{ .maildir }}/personal
 
 [user]
-name=Ben Mezger
+name=Willian de Souza
 primary_email={{ .email }}
 {{ if .workconf }}other_email={{ .work.workmail }} {{ end }}
 
