--- a/dot_mailcap.tmpl
+++ b/dot_mailcap.tmpl
@@ -10,3 +10,6 @@ text/x-diff; nvim %s
 text/x-patch; nvim %s
 text/plain; nvim %s
 application/x-patch; nvim %s
+image/png; /usr/bin/feh %s
+image/jpeg; /usr/bin/feh %s
+video/*; /usr/bin/mpv %s
