--- a/dot_config/i3/status.toml.tmpl
+++ b/dot_config/i3/status.toml.tmpl
@@ -64,6 +64,12 @@ block = "battery"
 format = " $icon $percentage $time "
 
 [[block]]
+block = "custom"
+interval=300
+command="echo -n '\uf0e0 ' &&  notmuch count 'tag:inbox' && sh -c 'cd /home/willian/mail/personal/; gmi pull>/dev/null'"
+format="{ $icon|} $text.pango-str() "
+
+[[block]]
 block = "time"
 interval = 60
 [block.format]
