--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -33,11 +33,11 @@
 {{- $personal_imap_host := "imap.gmail.com" -}}
 {{- $personal_imap_port := 443 -}}
 
-{{- $work_email := "willian.souza@saperx.com.br" -}}
-{{- $work_smtp_host := "smtp.gmail.com" -}}
-{{- $work_smtp_port := 587 -}}
-{{- $work_imap_host := "imap.gmail.com" -}}
-{{- $work_imap_port := 443 -}}
+{{- $work_email := "willian.souza@elevensoft.dev" -}}
+{{- $work_smtp_host := "smtp.hostinger.com" -}}
+{{- $work_smtp_port := 465 -}}
+{{- $work_imap_host := "imap.hostinger.com" -}}
+{{- $work_imap_port := 993 -}}
 
 {{- $podcast_opml := "https://www.listennotes.com/listen/podcast-list-McKCI8sZ0v2/opml/" -}}
 
@@ -105,7 +105,7 @@ data:
     i3rs: 1e298379-8595-4282-9506-b02301736669
     wakatime_api: af7eba11-909c-4425-9ed4-b02300eb8c75
     personal_mail: 7fdda3df-2ac1-43e2-a517-acd30009beb6
-    work_mail: 1e298379-8595-4282-9506-b02301736669
+    work_mail: eb9dee5e-a16b-42f7-9c33-b12300b1ab74
     ssh_pub: 75f7a883-6d56-453d-8678-b02300bacf9e
     ssh_priv: b51f9e3c-2a0a-44a9-8ff0-b02300c1320d
     ssh: eb36407d-787d-4266-9b97-acc3014f98a3
