neomutt: use google app key

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -105,6 +105,7 @@ data:
     i3rs: 1e298379-8595-4282-9506-b02301736669
     wakatime_api: af7eba11-909c-4425-9ed4-b02300eb8c75
     personal_mail: 7fdda3df-2ac1-43e2-a517-acd30009beb6
+    google_app_key: 4fe4883c-f664-4a86-9d96-b188012ac263
     work_mail: eb9dee5e-a16b-42f7-9c33-b12300b1ab74
     ssh_pub: 75f7a883-6d56-453d-8678-b02300bacf9e
     ssh_priv: b51f9e3c-2a0a-44a9-8ff0-b02300c1320d
