--- a/dot_mbsyncrc.tmpl
+++ b/dot_mbsyncrc.tmpl
@@ -7,7 +7,7 @@ Host {{ .imap_host }}
 User {{ .email }}
 # To store the password in an encrypted file use PassCmd instead of Pass
 # PassCmd "gpg2 -q --for-your-eyes-only --no-tty -d ~/.mailpass.gpg"
-Pass {{ (bitwarden "item" .bitwarden.google_app_key).login.password }}
+Pass "{{ (bitwarden "item" .bitwarden.google_app_key).login.password }}"
 SSLType IMAPS
 AuthMechs PLAIN
 
