spotify: use spotifyd and tui

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -122,4 +122,5 @@ data:
     liberachat: 1e298379-8595-4282-9506-b02301736669
     redshift: da49ff0d-3984-4d07-86ba-b08e0166812b
     elevensoft: 5eef454b-706e-4347-b4c2-b0d70175769d
+    spotify: d183c021-ce3f-4fbd-bb5d-b19b013beda5
 {{- end -}}
