nvim: autocmd to publish blog from norg to md

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -123,4 +123,5 @@ data:
     redshift: da49ff0d-3984-4d07-86ba-b08e0166812b
     elevensoft: 5eef454b-706e-4347-b4c2-b0d70175769d
     spotify: d183c021-ce3f-4fbd-bb5d-b19b013beda5
+    nvim: fbb840de-603d-4354-b648-b20600e0b718
 {{- end -}}
