git: set delta default syntax-theme

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -102,10 +102,13 @@
 [pull]
     rebase = true
 [delta]
-    syntax-theme = gruvbox-dark
     features = unobtrusive-line-numbers decorations
     line-numbers = true
     navigate = true
+    side-by-side = true
+    conflictStyle = zdiff3
+    dark = true
+    syntax-theme = gruvbox-dark
 [interactive]
     diffFilter = delta --color-only
 [rerere]
