bin: add tool to handle server manual credentials

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -74,6 +74,7 @@ data:
     work_mail: eb9dee5e-a16b-42f7-9c33-b12300b1ab74
     ssh_pub: 75f7a883-6d56-453d-8678-b02300bacf9e
     ssh_priv: b51f9e3c-2a0a-44a9-8ff0-b02300c1320d
+    srv_credentials: bbd5f49b-aa99-4c66-a08e-b24f01562648
     ssh: eb36407d-787d-4266-9b97-acc3014f98a3
     pgp_priv: 12fd17c3-9a82-45f6-968c-b023017d97d0
     lastfm: c9a4cb98-f7b5-46ea-bef9-acb500c08fff
