chezmoi: add missing minimal key

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -43,6 +43,7 @@ sourceDir: {{ .chezmoi.sourceDir }}
 
 data:
   secrets: {{ $secrets }}
+  minimal: {{ $minimal }}
   headless: {{ $headless }}
   hostname: {{ $hostname }}
   gpg_keyid: {{ $gpg_keyid }}
