--- a/dot_config/systemd/user/kanata.service.tmpl
+++ b/dot_config/systemd/user/kanata.service.tmpl
@@ -4,7 +4,7 @@ Description=Kanata Service
 [Service]
 ExecStartPre=/usr/bin/modprobe uinput
 ExecStart=/usr/bin/kanata
-ExecStartPost=/usr/bin/xmodmap /home/bit/.Xmodmap
+ExecStartPost=/usr/bin/xmodmap /home/{{ .username }}/.Xmodmap
 Restart=no
 
 [Install]
