fix: cleanup useless config

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -1,75 +1,22 @@
-{{- $minimal := false -}}
-{{- $headless := false -}}
-{{- $secrets := true -}}
-{{- $workconf := false -}}
-
-{{- if (env "CI") -}}
-{{- $headless = true -}}
-{{- $secrets = false -}}
-{{- end -}}
-
-{{- if (env "SECRETS_OFF") -}}
-{{- $secrets = false -}}
-{{- end -}}
-
-{{- if (env "WORKCONF") -}}
-{{- $workconf = true -}}
-{{- end -}}
-
 {{- $name := "Willian de Souza" -}}
-{{- $gmail_email := "willian.souza.ti@gmail.com" -}}
+{{- $gmail_email := "hello@williandesouza.com" -}}
 {{- $hostname := "bit" -}}
 {{- $gpg_keyid := "0x7357E344D6C3C795" -}}
 {{- $github_user := "bit-willi" -}}
 {{- $maildir := "mail" -}}
 
-{{- $email := "me@bitwilli.com" -}}
-{{- $personal_smtp_host := "smtp.hostinger.com" -}}
-{{- $personal_smtp_port := 465 -}}
-{{- $personal_imap_host := "imap.hostinger.com" -}}
-{{- $personal_imap_port := 993 -}}
-
-{{- $gmail_smtp_host := "smtp.gmail.com" -}}
-{{- $gmail_smtp_port := 465 -}}
-{{- $gmail_imap_host := "imap.hostinger.com" -}}
-{{- $gmail_imap_port := 993 -}}
-
-{{- $work_smtp_host := "smtp.hostinger.com" -}}
-{{- $work_smtp_port := 465 -}}
-{{- $work_imap_host := "imap.hostinger.com" -}}
-{{- $work_imap_port := 993 -}}
-
 sourceDir: {{ .chezmoi.sourceDir }}
 
 data:
   username: "{{ env "USER" }}"
-  secrets: {{ $secrets }}
-  minimal: {{ $minimal }}
-  headless: {{ $headless }}
   hostname: {{ $hostname }}
   gpg_keyid: {{ $gpg_keyid }}
   github_user: {{ $github_user }}
-  workconf: {{ $workconf }}
   maildir: {{ joinPath (printf "%v" .chezmoi.homeDir) $maildir }}
   name: {{ $name }}
   email: {{ $email }}
-  smtp_host: {{ $personal_smtp_host }}
-  smtp_port: {{ $personal_smtp_port }}
-  imap_host: {{ $personal_imap_host }}
-  imap_port: {{ $personal_imap_port }}
-  gmail:
-    imap_host: {{ $gmail_imap_host }}
-    imap_port: {{ $gmail_imap_port }}
-    smtp_host: {{ $gmail_smtp_host }}
-    smtp_port: {{ $gmail_smtp_port }}
-  work:
-    imap_host: {{ $work_imap_host }}
-    imap_port: {{ $work_imap_port }}
-    smtp_host: {{ $work_smtp_host }}
-    smtp_port: {{ $work_smtp_port }}
   bitwarden:
     i3rs: 1e298379-8595-4282-9506-b02301736669
-    wakatime_api: af7eba11-909c-4425-9ed4-b02300eb8c75
     google_app_key: 4fe4883c-f664-4a86-9d96-b188012ac263
     personal_mail: eb9dee5e-a16b-42f7-9c33-b12300b1ab74
     gmail_mail: 7fdda3df-2ac1-43e2-a517-acd30009beb6
@@ -79,16 +26,9 @@ data:
     srv_credentials: bbd5f49b-aa99-4c66-a08e-b24f01562648
     ssh: eb36407d-787d-4266-9b97-acc3014f98a3
     pgp_priv: 12fd17c3-9a82-45f6-968c-b023017d97d0
-    lastfm: c9a4cb98-f7b5-46ea-bef9-acb500c08fff
-    weechat_passphrase: 1e298379-8595-4282-9506-b02301736669
     github_repo_token: f52b5149-5545-4061-9949-b02300edd975
-    codestats_api_key_osx: 4be111e5-875c-4e73-8787-ad380047ac21
-    codestats_api_key_linux: af7eba11-909c-4425-9ed4-b02300eb8c75
     ngrok: d64af208-3b13-4630-b71f-b02301817892
     ssh_config: caca3cd5-b869-4bc2-a7e9-b02000052afe
     googleapi: 81035666-62e2-4c4c-af25-b0680016e27d
-    liberachat: 1e298379-8595-4282-9506-b02301736669
-    redshift: da49ff0d-3984-4d07-86ba-b08e0166812b
-    elevensoft: 5eef454b-706e-4347-b4c2-b0d70175769d
     spotify: d183c021-ce3f-4fbd-bb5d-b19b013beda5
     nvim: fbb840de-603d-4354-b648-b20600e0b718
