nvim: add avante gemini AI

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -18,7 +18,7 @@ data:
   bitwarden:
     i3rs: 1e298379-8595-4282-9506-b02301736669
     google_app_key: 4fe4883c-f664-4a86-9d96-b188012ac263
-    personal_mail: eb9dee5e-a16b-42f7-9c33-b12300b1ab74
+    google: e1e8dc22-20be-4f8d-b8f3-b2ad013dc977
     gmail_mail: 7fdda3df-2ac1-43e2-a517-acd30009beb6
     work_mail: eb9dee5e-a16b-42f7-9c33-b12300b1ab74
     ssh_pub: 75f7a883-6d56-453d-8678-b02300bacf9e
