--- a/dot_env-secrets.tmpl
+++ b/dot_env-secrets.tmpl
@@ -1,19 +1,6 @@
-#!/bin/bash
-#
 export I3RS_GITHUB_TOKEN={{ (bitwarden "item" .bitwarden.i3rs).login.password }}
-
 # A little hack as 'BW_SESSION' must be set before running
 # chezmoi, so we write the new BW_SESSION back to this file
 export BW_SESSION={{ env "BW_SESSION" }}
-
-# Weechat will prompt for a passphrase on open.
-# This will allow weechat to use the following
-# passphrase to decrypt secure data.
-export WEECHAT_PASSPHRASE={{ (bitwarden "item" .bitwarden.weechat_passphrase).login.password }}
-
+export GEMINI_API_KEY={{ (index (bitwarden "item" .bitwarden.google).fields 0).value }}
 export GITHUB_TOKEN={{ (bitwarden "item" .bitwarden.github_repo_token).login.password }}
-{{ if eq .chezmoi.os "darwin" -}}
-export CODESTATS_API_KEY={{ (bitwarden "item" .bitwarden.codestats_api_key_osx).login.password }}
-{{ else -}}
-export CODESTATS_API_KEY={{ (bitwarden "item" .bitwarden.codestats_api_key_linux).login.password }}
-{{ end -}}
